# sk82-recomp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
recomp_config/: jumptbl.toml  recomp.toml
src/: loader.cpp  loader.h  log.h  main.cpp  patches.cpp  xex.h
src/audio/: audio_hooks.cpp  sdlwrap.h
src/cpu/: guest_thread.cpp  guest_thread.h  mutex.h
src/game/: game_structs.h
src/graphics/: d3d_context.h  dds_context.h  shaders.cpp  shaders.h  tga_context.h  video.cpp  video.h  video_hooks.cpp  video_hooks.h  xtexhelper.cpp  xtexhelper.h
src/input/: input_hooks.cpp
src/kernel/: function.h  heap.h  memory.cpp  memory.h  ppc_local.h  xbox.h  xdm.cpp  xdm.h
src/kernel/hooks/: hooks.h  xam.cpp  xfilesystem.cpp  xgpu.cpp  xkernel.cpp  xma.cpp  xma.h  xmem.cpp  xthreading.cpp
src/utils/: tsqueue.h
utils/: idasizescript.py  jmptableparser.py  missingopcodes.py  stubscript.py  xenonlog.txt
